--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-navigation": "^6.9.0"
+    "react-native-navigation": "^6.9.0",
+    "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
