--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-navigation": "^6.9.0",
     "react-native-vector-icons": "^7.0.0"
   },
