--- a/ios/Movies.xcodeproj/xcshareddata/xcschemes/Movies.xcscheme
+++ b/ios/Movies.xcodeproj/xcshareddata/xcschemes/Movies.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Movies.app"
-               BlueprintName = "Movies"
-               ReferencedContainer = "container:Movies.xcodeproj">
+               BuildableName = "Weather.app"
+               BlueprintName = "Weather"
+               ReferencedContainer = "container:Weather.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "MoviesTests.xctest"
                BlueprintName = "MoviesTests"
-               ReferencedContainer = "container:Movies.xcodeproj">
+               ReferencedContainer = "container:Weather.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Movies.app"
-            BlueprintName = "Movies"
-            ReferencedContainer = "container:Movies.xcodeproj">
+            BuildableName = "Weather.app"
+            BlueprintName = "Weather"
+            ReferencedContainer = "container:Weather.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Movies.app"
-            BlueprintName = "Movies"
-            ReferencedContainer = "container:Movies.xcodeproj">
+            BuildableName = "Weather.app"
+            BlueprintName = "Weather"
+            ReferencedContainer = "container:Weather.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
