--- a/ios/Weather.xcodeproj/xcshareddata/xcschemes/Weather.xcscheme
+++ b/ios/Weather.xcodeproj/xcshareddata/xcschemes/Weather.xcscheme
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MoviesTests.xctest"
-               BlueprintName = "MoviesTests"
+               BuildableName = "WeatherTests.xctest"
+               BlueprintName = "WeatherTests"
                ReferencedContainer = "container:Weather.xcodeproj">
             </BuildableReference>
          </TestableReference>
