--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-device-info": "^5.6.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
